--- a/customer.html
+++ b/customer.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Customer</title>
     <link rel="icon" type="img/png" href="./logo_small.png">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> >
+    <link rel="stylesheet" href="./css/customer.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
 </head>
 
 <body>
@@ -32,8 +31,10 @@
             <a href="./customer.html">Client</a>
             <a href="./product.html">Products</a>
             <a href="./reports.html">Raports</a>
+
         </div>
     </div>
+
 
     <!-- social media icons -->
     <div class="icons">
@@ -52,13 +53,56 @@
     </div>
 
 
+    <h1 class="title">Customer</h1>
+    <h2 class="Customer_subtitel1">Add new customer</h2>
+    <div class="content">
+        <div class="customerDetails">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">Company Name:</span>
+                </div>
+                <input id="newName" type="text" class="form-control" placeholder="ex: Energobit"
+                    aria-describedby="basic-addon1">
+            </div>
 
-    <img src="./logo.png" alt="logo" class="logo_home">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">CIF:</span>
+                </div>
+                <input id="newCUI" type="text" class="form-control" placeholder=" ex: RO255698"
+                    aria-describedby="basic-addon1">
+            </div>
 
 
+            <button type="button" id="save_new" class="btn btn-primary">Save</button>
+
+        </div>
+    </div>
+
+
+    <h2 class="Customer_subtitel2">Customer List</h2>
+
+
+
+    <table class="table" id="customer_table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">No.</th>
+                <th scope="col">Company Name</th>
+                <th scope="col">CUI</th>
+                <th scope="col">Edit/Delete</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+
+
+    </table>
 
 
     <script src="./js/mainUI.js"></script>
+    <script src="./js/invoice_classes.js"></script>
+    <script src="./js/invoice_return_functions.js"></script>
+    <script src="./js/customer.js"></script>
 </body>
 
 </html>
