--- a/supplier.html
+++ b/supplier.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
+    <title>Supplier</title>
     <link rel="icon" type="img/png" href="./logo_small.png">
     <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet"> >
+    <link rel="stylesheet" href="./css/supplier.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
 </head>
 
 <body>
@@ -44,6 +42,7 @@
     </div>
     </nav>
 
+
     <!-- burger menu -->
     <div id="toggle" onclick="toggleSidebar()">
         <div class="span" id="one"></div>
@@ -52,13 +51,59 @@
     </div>
 
 
+    <h1 class="title">Supplier</h1>
+    <h2 class="Supplier_subtitel1">Add new supplier</h2>
+    <div class="content">
+        <div class="supplierDetails">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">Company Name:</span>
+                </div>
+                <input id="newName" type="text" class="form-control" placeholder="ex: Energobit"
+                    aria-describedby="basic-addon1">
+            </div>
 
-    <img src="./logo.png" alt="logo" class="logo_home">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">CIF:</span>
+                </div>
+                <input id="newCUI" type="text" class="form-control" placeholder=" ex: RO255698"
+                    aria-describedby="basic-addon1">
+            </div>
+
+
+            <button type="button" id="save_new" class="btn btn-primary">Save</button>
+
+        </div>
+    </div>
+
+
+    <h2 class="Supplier_subtitel2">Supplier List</h2>
+
+
+
+    <table class="table" id="supplier_table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">No.</th>
+                <th scope="col">Company Name</th>
+                <th scope="col">CUI</th>
+                <th scope="col">Edit/Delete</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+
+
+    </table>
+
 
 
 
 
     <script src="./js/mainUI.js"></script>
+    <script src="./js/invoice_classes.js"></script>
+    <script src="./js/invoice_return_functions.js"></script>
+    <script src="./js/supplier.js"></script>
 </body>
 
 </html>
